@@ -1724,6 +1724,10 @@
 
         * spinner: added signals "spinner,drag,start" and "spinner,drag,stop".
 
+2013-10-27  Thiep Ha
+
+        * entry: Correct magnifier showing.
+
 2013-10-30  Amitesh Singh (_ami_)
 
         * image: Add support for "clicked" callback on Return/space/KP_Enter key press.
